--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <title>Kawah Putih</title>
  <meta charset="utf-8">
- <link rel="stylesheet" href="lat3.css">
+ <link rel="stylesheet" href="index.css">
  <script src="index.js" async></script>
 </head>
 <body>
