--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="judul">
     <h1>Kawah Putih</h1>
     <h2>Destinasi Wisata Alam Indonesia</h2>
-<img src="kawah putih 2.jpg"/>
+<img src="Kawah putih 2.jpg"/>
 
 </div>
 
