--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="navigasi">
     <ul>
-        <li class="active"><a href="https://https://id.wikipedia.org/wiki/Kawah_Putih">HOME</a></li>
+        <li class="active"><a href="https://id.wikipedia.org/wiki/Kawah_Putih">HOME</a></li>
         <li><a href="https://www.klook.com/id/blog/kawah-putih-bandung">TENTANG</a></li>
         <li><a href="https://www.bing.com/images/search?q=galeri+kawah+putih&form=HDRSC2&first=1&tsc=ImageBasicHover">GALERI</a></li>
         <li><a href="#">KONTAK</a></li>
