--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <div class="kanan">
         <h1>New Artikel</h1><br>
         <ul>
-        <a href="#"><li>Wisata Alam 1</li></a>
-        <a href="#"><li>Wisata Alam 2</li></a>
-        <a href="#"><li>Wisata Alam 3</li></a>
-        <a href="#"><li>Wisata Alam 4</li></a>
-        <a href="#"><li>Wisata Alam 5</li></a>
+        <a href="https://www.driamriverside.com/"><li>Wisata Alam 1</li></a>
+        <a href="https://www.bing.com/images/search?q=ranca+upas&FORM=HDRSC2"><li>Wisata Alam 2</li></a>
+        <a href="https://www.bing.com/images/search?q=glamping+ciwidey&form=HDRSC2&first=1&tsc=ImageBasicHover"><li>Wisata Alam 3</li></a>
+        <a href="https://www.bing.com/images/search?q=valley+ciwidey&go=Search&qs=ds&form=QBIR&first=1&tsc=ImageBasicHover"><li>Wisata Alam 4</li></a>
+        <a href="https://www.bing.com/images/search?q=barusen%20hills%20ciwidey&qs=UT&form=QBIR&sp=1&pq=barusen%20h&sc=8-9&cvid=AD5ECF898B614899AF2D2A288CA51A2B&first=1&tsc=ImageBasicHover"><li>Wisata Alam 5</li></a>
         </ul>    
     </div>
 </div>
